[package]
name = "auth-extension"
version = "0.1.0"
edition = "2021"
description = "An authentication extension for CoreX-API."
license = "MIT OR Apache-2.0"
repository = "https://github.com/denver-code/auth-extension"
keywords = ["auth", "corex", "extension"]
categories = ["web-programming", "authentication"]

[lib]
name = "auth_extension"
path = "src/lib.rs"

[dependencies]
axum = "0.8.1"
serde_json = "1.0"
corex-api = "0.1.1"
